<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardElevation="2dp"
    android:id="@+id/cvConnections"
    android:layout_margin="2dp"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/itemParent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imgFollower"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/cd_image"
            android:src="@drawable/a"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="@+id/linearLayout"
            app:layout_constraintTop_toTopOf="@+id/imgFollower">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:adjustViewBounds="true"
                android:layout_gravity="end"
                android:visibility="gone"
                android:layout_margin="10dp"
                android:id="@+id/imgCheckEnabled"
                android:src="@drawable/ic_blue_check_enable" />
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:adjustViewBounds="true"
                android:layout_gravity="end"
                android:visibility="gone"
                android:id="@+id/imgCheckDisabled"
                android:layout_margin="10dp"
                android:src="@drawable/ic_blue_check_disable" />
        </FrameLayout>

        <RelativeLayout
            android:id="@+id/rlRating"
            android:layout_width="match_parent"
            android:layout_height="18dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:background="#BF276C83"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="@+id/imgFollower"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <ImageView
                android:id="@+id/imgStar"
                android:layout_width="wrap_content"
                android:layout_height="10dp"
                android:layout_centerVertical="true"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="5dp"
                android:contentDescription="@string/cd_image_of_rating_star"
                android:adjustViewBounds="true"
                android:src="@drawable/ic_star_white" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="4dp"
                android:layout_toStartOf="@+id/imgStar"
                android:text="@string/txt_rating"
                android:id="@+id/txtRating"
                android:textColor="#efeff4"
                android:textSize="12sp" />
        </RelativeLayout>

        <TextView
            android:id="@+id/txtTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:fontFamily="sans-serif"
            android:text="@string/txt_roosvelt_del"
            android:textColor="@android:color/black"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rlRating" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtTitle">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="10dp"
                android:layout_gravity="center_vertical"
                android:adjustViewBounds="true"
                android:contentDescription="@string/cd_image_of_task_completed"
                android:src="@drawable/ic_tasks_completed_icon" />

            <TextView
                android:id="@+id/txtTaskCount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:gravity="center_vertical"
                android:text="@string/txt_tasks_completed"
                android:textAlignment="center"
                android:textSize="12sp" />

        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>